--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,11 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: emc2-theme
+remote-theme: mgodlfar/emc2-theme
 #jekyll-theme-cayman
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
