--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-remote-theme: mgoldfar/emc2-theme
-#jekyll-theme-cayman
+remote_theme: mgoldfar/emc2-theme
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
