--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
+encoding: utf-8
+
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
@@ -26,7 +28,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-remote_theme: mgoldfar/emc2-theme
+#remote_theme: mgoldfar/emc2-theme@working
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
