--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 encoding: utf-8
 
 # Site settings
-title: Workshop on Energy Efficent Machine Learning and Cognitive Computing for Embedded Applications
+title: Workshop on Energy Efficient Machine Learning and Cognitive Computing for Embedded Applications
 short_title: EMC2
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
