Set default template for edition pages.

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,11 @@ collections:
   programs:
 
 exclude: [doc]
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "editions"
+    values:
+      layout: "edition-page"
